# myovox

./: .gitignore  README.md  STORY_AUTOPILOT.md  STORY_PAGE_PERFECTION_BRIEF.md  STORY_TASKS.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
configs/: augmented.yaml  conformer.yaml  lift.yaml  nbest.yaml  offline.yaml  ssl_features.yaml  teacher_bilstm.yaml  teacher_conv.yaml
docs/: explanation.md  technical_report.md
scripts/: run.sh  setup.sh
src/: __init__.py  config.py  log.py  paths.py  report.py  reproduce.py  runlog.py
src/audio/: ssl_features.py  teacher_bilstm.py  teacher_conv.py
src/data/: covariance.py  data.py  text.py
src/decode/: decode.py  evaluate.py  score.py
src/models/: frontend.py  losses.py  model.py
src/pipeline/: ensemble.py  forward.py  nbest.py  union.py
src/rerank/: __init__.py  data.py  infer.py  train.py  tune.py
src/training/: crossfold.py  train.py  train_augmented.py
tests/: conftest.py  test_config.py  test_decode_isolation.py  test_imports.py  test_leakage.py  test_reproduce.py
website/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
website/anim/: 01-hero.py  02-why.py  03-landscape.py  04-roadmap.py  05-muscles.py  06-signal.py  07-features-window.py  08-two-sensors-dancing.py  09-features-cov.py  10-every-pair-grid.py  11-features-embed.py  12-what-is-a-net.py  13-how-training-works.py  14-targets-phon.py  15-targets-units.py  16-where-units-from.py  17-two-answer-keys.py  18-alignment-problem.py  19-ctc.py  20-ctc-many-timings.py  21-encoder-bidir.py  22-what-is-attention.py  23-what-is-convolution.py  24-memorize-trap.py  25-conformer.py  26-heads.py  27-copy-the-teacher.py  28-voice-as-teacher.py  29-distillation.py  30-frozen-recognizer.py  31-blurry-average-cheat.py  32-frozen-lock-how.py  33-twin-warmstart.py  34-second-opinion.py  35-wfst.py  36-sounds-to-words-search.py  37-knobs.py  38-what-is-lm.py  39-ensemble-nbest.py  40-what-is-wer.py  (+67 more)
website/public/: 404.html  robots.txt  sitemap.xml
website/public/anim/: alignment-problem.captions.json  approach.captions.json  arc.captions.json  articulation.captions.json  binding-constraint.captions.json  blurry-average-cheat.captions.json  conformer.captions.json  copy-the-teacher.captions.json  credits.captions.json  ctc-many-timings.captions.json  ctc.captions.json  distillation.captions.json  electricity.captions.json  encoder-bidir.captions.json  end.captions.json  ensemble-nbest.captions.json  every-pair-grid.captions.json  features-cov.captions.json  features-embed.captions.json  features-window.captions.json  foundation.captions.json  frozen-lock-how.captions.json  frozen-recognizer.captions.json  heads.captions.json  hero.captions.json  how-training-works.captions.json  journey.captions.json  knobs.captions.json  landscape.captions.json  memorize-trap.captions.json  muscles.captions.json  recording.captions.json  rerank.captions.json  roadmap.captions.json  second-opinion.captions.json  sensors.captions.json  signal.captions.json  silent.captions.json  sounds-to-words-search.captions.json  targets-phon.captions.json  (+14 more)
website/scripts/: .gitignore  bake-head.mjs  cap_shot.mjs  fetch-head.mjs  narrate.py  play_test.mjs  shoot.mjs
website/src/: App.tsx  main.tsx
website/src/content/: snippets.ts  technical_report.md
website/src/data/: muscles.ts  narration.json  narration.ts  site.ts  speech.ts  stages.ts
website/src/hooks/: useHeadPoints.ts  useLenis.ts  useResponsive.ts  useScrollProgress.ts  useScrollSnap.ts
(+87 files in other folders)
