[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "myovox"
version = "2.0.0"
description = "Surface-EMG to text decoding — a Conformer+WavLM-L9 ensemble → n-best union → LIFT LLM-rerank pipeline (18.53 WER)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "myovox contributors" }]
keywords = ["EMG", "silent-speech", "speech-recognition", "conformer", "CTC", "n-best", "LLM-rerank"]
dependencies = [
  "torch>=2.0",
  "torchaudio",
  "numpy",
  "scipy",
  "jiwer",
  "python-Levenshtein",
  "g2p_en",
  "transformers",
  "peft",
  "datasets",
  "bitsandbytes",
  "accelerate",
  "pyyaml",
  "matplotlib",
]
# NOTE: k2 + icefall (the WFST decoder) are installed separately — they need the wheel matching
# your torch/CUDA. See scripts/setup.sh and https://k2-fsa.github.io/k2/.

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
myovox-reproduce = "myovox.reproduce:main"          # acoustic member -> 26.14 / 22.34 (cached logits)
myovox-rerank = "myovox.rerank.infer:main"          # final pipeline -> 18.53
myovox-train = "myovox.training.train:main"         # train the Conformer from scratch
myovox-score = "myovox.decode.score:main"           # score a cached logits file

# The package `myovox` lives directly in src/ (no src/myovox wrapper): src/ -> myovox,
# src/models/ -> myovox.models, etc. Requires `pip install -e .` to import.
[tool.setuptools]
package-dir = {"myovox" = "src"}
packages = [
    "myovox", "myovox.data", "myovox.models", "myovox.decode",
    "myovox.audio", "myovox.training", "myovox.pipeline", "myovox.rerank",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
